// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render prop data 1`] = `
<div
  aria-current={true}
  aria-hidden={true}
  className="tab is-disabled is-placeholder has-count"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={null}
  onKeyDown={null}
  onMouseDown={[Function]}
  role="link"
  tabIndex="0"
  type="button"
>
  <span
    className="tab-inner"
  >
    <span
      className="tab-label"
    >
      my text
    </span>
    <span
      className="tab-count"
    >
      <TabCount
        value={1}
      />
    </span>
  </span>
</div>
`;

exports[`Tab should render with render function block 1`] = `
<div
  aria-current={true}
  aria-hidden={true}
  className="tab is-disabled"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={null}
  onKeyDown={null}
  onMouseDown={[Function]}
  role="link"
  tabIndex="0"
  type="button"
>
  <div>
    text=my text hasCount=true isActive=true notificationCount=1
  </div>
</div>
`;

exports[`Tab should render with required prop data 1`] = `
<div
  className="tab"
  data-item-show-focus={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="link"
  tabIndex="0"
  type="button"
>
  <span
    className="tab-inner"
  >
    <span
      className="tab-label"
    >
      my text
    </span>
  </span>
</div>
`;

exports[`Tab should render with selection callback 1`] = `
<div
  className="tab"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="link"
  tabIndex="0"
  type="button"
>
  <span
    className="tab-inner"
  >
    <span
      className="tab-label"
    >
      my text
    </span>
  </span>
</div>
`;
